--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity-svgrepo-com.svg" alt="">     
+                    <img src="humidity-svgrepo-com.svg" alt="">     
                     <div>
                         <p class="humidity">
                             50%
@@ -27,7 +27,7 @@
                     </div>               
                 </div>
                 <div class="col">
-                    <img src="images/wind-svgrepo-com.svg" alt="">     
+                    <img src="wind-svgrepo-com.svg" alt="">     
                     <div>
                         <p class="wind">
                             15 km/hr
