--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter city name... " spellcheck="false">
-            <button><img src="images/serch.svg" alt=""></button>
+            <button><img src="search.png" alt=""></button>
         </div>
         <div class="weather">
             <img src="clear.png" class="weather img">
